--- a/build.yml
+++ b/build.yml
@@ -1,4 +1,4 @@
-name: 'Cross.Core.$(major).$(minor).$(iteration).$(Build.BuildId)'
+name: 'Cross.Core.$(major).$(minor).$(iteration).$(patch)'
 
 pool:
   vmImage: 'windows-2019'
@@ -7,7 +7,8 @@ variables:
   buildConfiguration: 'Release'
   major: '1'
   minor: '0'
-  iteration: '0'
+  iteration: '1'
+  patch: '[int]$(Build.BuildId)%65535'
 
 steps:
 - task: RegExMatchReplace@2
