--- a/build.yml
+++ b/build.yml
@@ -1,4 +1,4 @@
-name: 'Cross.Core.$(major).$(minor).$(iteration).$(patch)'
+name: 'Cross.Core.$(major).$(minor).$(iteration).$(Build.BuildId)'
 
 pool:
   vmImage: 'windows-2019'
@@ -8,7 +8,6 @@ variables:
   major: '1'
   minor: '0'
   iteration: '1'
-  patch: ${{ format('{0}', [int]$(Build.BuildId)%65535) }}
 
 steps:
 - task: RegExMatchReplace@2
