--- a/src/Cross.Core/Cross.Core.csproj
+++ b/src/Cross.Core/Cross.Core.csproj
@@ -12,7 +12,6 @@
     <PackageProjectUrl>https://createyour.software/docs/Core/</PackageProjectUrl>
     <PackageProjectUrl>https://createyour.software</PackageProjectUrl>
     <RepositoryType>Git</RepositoryType>
-    <PackageIconUrl>https://createyour.software/images/Core.png</PackageIconUrl>
     <RepositoryUrl>https://dev.azure.com/cross-software/Core/_git/Cross.Core</RepositoryUrl>
     <AssemblyVersion>0.1.2.0</AssemblyVersion>
     <FileVersion>0.1.2.0</FileVersion>
@@ -42,4 +41,7 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+      <None Include="images\icon.png" Pack="true" PackagePath=""/>
+  </ItemGroup>
 </Project>
