--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,4 +18,15 @@ jobs:
       - name: Build
         run: dotnet build --configuration Release --no-restore
       - name: Test
-        run: dotnet test --no-restore --verbosity normal
+        run: dotnet test --logger trx --results-directory "TestResults" --no-restore --verbosity normal
+      - name: Upload dotnet test results
+        uses: actions/upload-artifact@v2
+        with:
+          name: dotnet-results
+          path: TestResults
+          # Use always() to always run this step to publish test results when there are test failures
+          if: ${{ always() }}
+      - name: Create the package
+        run: dotnet pack --configuration Release src/Cross.Core/Cross.Core.csproj
+      - name: Publish the package to GPR
+        run: dotnet nuget push src/Cross.Core/bin/Release/*.nupkg
