--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,7 +26,7 @@ jobs:
           path: TestResults
           # Use always() to always run this step to publish test results when there are test failures
           if: ${{ always() }}
-      - name: Create the package
-        run: dotnet pack --configuration Release src/Cross.Core/Cross.Core.csproj
+      #- name: Create the package
+      #  run: dotnet pack --configuration Release src/Cross.Core/Cross.Core.csproj
       - name: Publish the package to GPR
         run: dotnet nuget push src/Cross.Core/bin/Release/*.nupkg
