--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,7 +26,8 @@ jobs:
           path: TestResults
           # Use always() to always run this step to publish test results when there are test failures
         if: ${{ always() }}
-      - name: Create the package
-        run: dotnet pack ./src/Cross.Core/Cross.Core.csproj --configuration Release 
-      #- name: Publish the package to GPR
-      #  run: dotnet nuget push ./src/Cross.Core/bin/Release/**/*.nupkg
+      
+      # The Create Package step is unnecessary because the dotnet build step already builds it.
+      
+      - name: Publish the package to GPR
+        run: dotnet nuget push "./src/Cross.Core/bin/Release/*.nupkg" --source "github"
