--- a/src/Cross.Core/Cross.Core.csproj
+++ b/src/Cross.Core/Cross.Core.csproj
@@ -10,9 +10,8 @@
     <Copyright>Copyright © 2019 Chris Trout. All rights reserved.</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://createyour.software/docs/Core/</PackageProjectUrl>
-    <PackageProjectUrl>https://createyour.software</PackageProjectUrl>
     <RepositoryType>Git</RepositoryType>
-    <RepositoryUrl>https://dev.azure.com/cross-software/Core/_git/Cross.Core</RepositoryUrl>
+    <RepositoryUrl>https://github.com/mytrout/Cross.Core/</RepositoryUrl>
     <AssemblyVersion>0.2.0.0</AssemblyVersion>
     <FileVersion>0.2.0.0</FileVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
