--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,4 +32,4 @@ jobs:
 
       - name: Publish the package to GitHub.
         run: dotnet nuget push "./src/Cross.Core/bin/Release/*.nupkg" --api-key ${{ secrets.GITHUB_TOKEN }} --source "https://nuget.pkg.github.com/mytrout/index.json"
-        if: contains(github.ref, "master")
+        if: contains(github.ref, 'master')
